@@ -44,6 +44,7 @@ See http://forrest.apache.org/docs/linking.html for more info
     <index label="MapReduce Input &amp; Output " href="inputoutput.html" />
     <index label="Cmd Line Interface " href="cli.html" />
     <index label="Supported data formats" href="supportedformats.html" />
+    <index label="Installation" href="install.html" />
     </docs>  
 
 </site>
