@@ -12,6 +12,7 @@ Trunk (unreleased changes)
     (Krishna Kumar via macyang)
     
   IMPROVEMENTS
+    HCAT-21. Install documenation and script (gates)
 
     HCAT-34. Add ant target for server side classes (hashutosh)
     
